# ShareBites

./: .gitignore  README.md  pubspec.yaml
lib/: accepted_donations.dart  add_donation.dart  auth_selector.dart  dashboard.dart  delivered_donations.dart  donation_model.dart  donation_store.dart  login_page.dart  main.dart  my_donations.dart  native_service.dart  receiver_dashboard.dart  receiver_signup_page.dart  signup_page.dart  splash_screen.dart
lib/db/: app_database.dart
native_lib/: CMakeLists.txt  native.cpp  sharebites_backend.exp  sharebites_backend.lib
windows/: .gitignore  CMakeLists.txt
windows/native/: native_lib.cpp
windows/runner/: CMakeLists.txt  main.cpp  native_lib.cpp
